<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_audio_section_title">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/settings_mute_key"
            app:summary="@string/settings_mute_summary"
            app:title="@string/settings_mute_title" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/settings_mute_music_key"
            app:summary="@string/settings_mute_music_summary"
            app:title="@string/settings_mute_music_title" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/settings_mute_selection_key"
            app:summary="@string/settings_mute_selection_summary"
            app:title="@string/settings_mute_selection_title" />
    </PreferenceCategory>


    <PreferenceCategory app:title="@string/settings_display_section_title">

        <ListPreference
            app:defaultValue="default"
            app:key="@string/settings_theme_pack_key"
            app:title="@string/settings_theme_pack_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="system"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="@string/settings_theme_key"
            app:summary="@string/settings_theme_summary"
            app:title="@string/settings_theme_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_gameplay_section_title">
        <ListPreference
            app:defaultValue="5s"
            app:entries="@array/auto_reset_entries"
            app:entryValues="@array/auto_reset_values"
            app:key="@string/settings_auto_reset_key"
            app:title="@string/settings_auto_reset_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_accessibility_section_title">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/settings_sticky_fingers_key"
            app:summary="@string/settings_sticky_fingers_summary"
            app:title="@string/settings_sticky_fingers_title" />
    </PreferenceCategory>
</PreferenceScreen>
