<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_select_person">

    <fragment
        android:id="@+id/navigation_select_person"
        android:name="com.dannylumen.choozi.ui.select_person.SelectPersonFragment"
        android:label="@string/title_select_person"
        tools:layout="@layout/fragment_select_person" />

    <fragment
        android:id="@+id/navigation_select_ordering"
        android:name="com.dannylumen.choozi.ui.select_ordering.SelectOrderingFragment"
        android:label="@string/title_select_ordering"
        tools:layout="@layout/fragment_select_ordering" />

    <fragment
        android:id="@+id/navigation_select_teams"
        android:name="com.dannylumen.choozi.ui.select_teams.SelectTeamsFragment"
        android:label="@string/title_select_teams"
        tools:layout="@layout/fragment_team_select" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.dannylumen.choozi.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>